# Automatic-tunning-for-MPC-in-autonomus-racing

./: .gitignore
fs_control_agh_racing/NO_STAGED/TUNE_BO_GP/src/: run_test.sh  rune_tune.sh
fs_control_agh_racing/NO_STAGED/TUNE_BO_TPO/src/: run_test.sh  rune_tune.sh
fs_control_agh_racing/NO_STAGED/TUNE_CMA_ES/src/: run_test.sh  run_tunning.sh
fs_control_agh_racing/NO_STAGED/TUNE_RANDOM_SEARCH/src/: run_random_search.sh  run_test.sh
fs_control_agh_racing/TUNE_BO_GP/src/: manual_theta.py  run_one_test.sh  run_test.sh  rune_tune.sh
fs_control_agh_racing/TUNE_BO_GP/src/BO_GP/: eval.py  gp_bo.py  gpbo_tv_test_candidates_night_7track.json  gpbo_tv_test_eval_night_7track.csv  top10_tv_so_far_night_4track.json  tuning_run_gp_bo_tv_night_4track.jsonl  tuning_summary_gp_bo_tv_night_4track.json
fs_control_agh_racing/TUNE_BO_TPO/src/: run_test.sh  rune_tune.sh
fs_control_agh_racing/TUNE_BO_TPO/src/BO_TPO/: eval.py  top10_tpe_tv_so_far_night_4track.json  tpe_tv_test_candidates_night_7track.json  tpe_tv_test_eval_night_7track.csv  tpo_fixed.py  tuning_run_tpe_tv_night_4track.jsonl  tuning_summary_tpe_tv_night_4track.json
fs_control_agh_racing/TUNE_CMA_ES/src/: run_test.sh  run_tunning.sh
fs_control_agh_racing/TUNE_CMA_ES/src/evolution_optimization/: cma_distribution_log_tv_night_4track.jsonl  cma_tv_test_candidates_night_4track.json  cma_tv_test_results_night_4track.csv  ev_op_fixed.py  eval.py  top10_so_far_tv_night_4track.json  tuning_run_tv_night_4track.jsonl  tuning_summary_tv_night_4track.json
fs_control_agh_racing/TUNE_RANDOM_SEARCH/src/: run_random_search.sh  run_test.sh
fs_control_agh_racing/TUNE_RANDOM_SEARCH/src/lem_simulator/: false_dv_path_planning_node.cpp
fs_control_agh_racing/TUNE_RANDOM_SEARCH/src/random_search/: eval.py  random_search_fixed.py  random_search_tv_test_candidates_night_7track.json  random_search_tv_test_eval_night_7track.csv  top10_random_search_tv_night_4track.json  top10_random_search_tv_staged_night_4track.json  tuning_run_random_search_tv_night_4track.jsonl  tuning_run_random_search_tv_staged_night_4track.jsonl  tuning_summary_random_search_tv_night_4track.json  tuning_summary_random_search_tv_staged_night_4track.json
fs_control_agh_racing/testing/: run_testing.py
fs_control_agh_racing/tuning/: run_tuning.py
fs_control_amz/NO_STAGE/TUNE_BO_GP/src/: manual_theta.py  run_one_test.sh  run_test.sh  rune_tune.sh
fs_control_amz/NO_STAGE/TUNE_BO_TPO/src/: manual_theta.py  run_one_test.sh  run_test.sh  run_tune.sh
fs_control_amz/NO_STAGE/TUNE_CMA_ES/src/: manual_theta.py  run_one_test.sh  run_test.sh  rune_tune.sh
fs_control_amz/NO_STAGE/TUNE_RANDOM_SEARCH/src/: manual_theta.py  run_one_test.sh  rune_test.sh  rune_tune.sh
fs_control_amz/TUNE_BO_GP/src/: manual_theta.py  run_one_test.sh  run_test.sh  rune_tune.sh
fs_control_amz/TUNE_BO_GP/src/BO_GP/: eval.py  full_coupled_gpbo_test_candidates_night_7track.json  full_coupled_gpbo_test_eval_night_7track.csv  gp_bo.py  top10_full_coupled_gpbo_night_4track.json  tuning_run_full_coupled_gpbo_night_4track.jsonl  tuning_summary_full_coupled_gpbo_night_4track.json
fs_control_amz/TUNE_BO_TPO/src/: manual_theta.py  run_one_test.sh  run_test.sh  run_tune.sh
fs_control_amz/TUNE_BO_TPO/src/BO_TPO/: eval.py  top10_full_coupled_tpe_night_4track.json  tpe_full_coupled_test_candidates_night_7track.json  tpe_full_coupled_test_eval_night_7track.csv  tpo_fixed.py  tuning_run_full_coupled_tpe_night_4track.jsonl  tuning_summary_full_coupled_tpe_night_4track.json
fs_control_amz/TUNE_BO_TPO/src/lem_simulator/: sim_loop.cpp
fs_control_amz/TUNE_CMA_ES/src/: manual_theta.py  run_one_test.sh  run_test.sh  rune_tune.sh
fs_control_amz/TUNE_CMA_ES/src/dv_control/: CMakeLists.txt
fs_control_amz/TUNE_CMA_ES/src/dv_control/config/Params/: control_param.json  control_param_best_full_coupled_3stage_cma_night_4track.json
fs_control_amz/TUNE_CMA_ES/src/dv_control/include/: spline.hpp
fs_control_amz/TUNE_CMA_ES/src/dv_control/mpc_solver/: run_solver_gen.sh
fs_control_amz/TUNE_CMA_ES/src/dv_control/mpc_solver/acados_solver_generated_frenet_centerline_runtime/: Makefile
fs_control_amz/TUNE_CMA_ES/src/dv_control/mpc_solver/acados_solver_generated_frenet_centerline_runtime/frenet_centerline_runtime_cost/: frenet_centerline_runtime_conl_cost_0_fun_jac_hess.c  frenet_centerline_runtime_cost_y_e_fun_jac_ut_xt.c
fs_control_amz/TUNE_CMA_ES/src/dv_control/src/: stanley.cpp  wrapper.cpp
fs_control_amz/TUNE_CMA_ES/src/evolution_optimization/: ev_op.py  eval.py  (+9 more)
fs_control_amz/TUNE_RANDOM_SEARCH/src/: manual_theta.py  run_one_test.sh  rune_test.sh  rune_tune.sh
fs_control_ka_racing/NO_STAGED/TUNE_BO_TPO/src/dv_control/: CMakeLists.txt
fs_control_ka_racing/NO_STAGED/TUNE_BO_TPO/src/dv_control/config/Params/: control_param.json  control_param_best_lti_3stage_tpe_smoke_1track.json  control_param_best_lti_unstaged_tpe_night_4track.json
fs_control_ka_racing/NO_STAGED/TUNE_BO_TPO/src/dv_control/src/: mpc_ka_racing.cpp
fs_control_ka_racing/TUNE_BO_GP/src/: manual_theta.py  run_eval.sh  run_one_test.sh  rune_tune.sh
fs_control_ka_racing/TUNE_BO_TPO/src/: run_eval.sh  rune_tune.sh
fs_control_ka_racing/TUNE_CMA_ES/src/: run_eval.sh  run_tunning.sh
fs_control_ka_racing/TUNE_RANDOM_SEARCH/src/: run_test.sh  run_tune.sh
(+285 files in other folders)
